src/test/ui/impl-trait/universal-two-impl-traits.stderr
error[E0308]: mismatched types
  --> $DIR/universal-two-impl-traits.rs:17:9
   |
17 |     a = y;
   |         ^- help: try using a conversion method: `.into()`
   |         |
   |         expected type parameter, found a different type parameter
   |
   = note: expected type `impl Debug` (type parameter)
              found type `impl Debug` (type parameter)

error: aborting due to previous error

